# MatterBlinds

./: .gitignore  CMakeLists.txt  diagram.json  esp_idf_project_configuration.json  install.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2  sdkconfig.matter  sdkconfig.thread  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig  app_priv.h  button_handler.cpp  button_handler.h  controller.cpp  controller.h  idf_component.yml  main.cpp  matter_integration.cpp  matter_integration.h  motor_control.cpp  motor_control.h  mqtt_integration.cpp  mqtt_integration.h  position_sensor.cpp  position_sensor.h
